--- a/src/Pages/Starships/styles.css
+++ b/src/Pages/Starships/styles.css
@@ -2,4 +2,11 @@
     width: 75%;
     margin: 50px;
 }
+.imagem-background-starships {
+    width: 100%;
+    height: 1400px;
+    background-image: url(../../assets/img/fundo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
