--- a/src/Pages/Cadastro/styles.css
+++ b/src/Pages/Cadastro/styles.css
@@ -13,15 +13,19 @@
 
 .criar-cadastro {
     margin: 3% 19.5% 0px 31%;
+    text-align: center;
+}
+.centraliza-titulo{
+    text-align: center;
 }
 
-.imagem-background-login {
+/* .imagem-background-login {
     width: 100%;
     height: 860px;
     background-image: url(./img/backLogin.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-}
+} */
 
 .painel {
     margin: auto;
