--- a/src/Components/Menu/styles.css
+++ b/src/Components/Menu/styles.css
@@ -7,7 +7,7 @@
 }
 
 .app-menu__link {
-    color:#bd0e37;
+    color:#ffffff;
     font-family: sans-serif;
     margin-right: 1rem;
     text-decoration: none;
