--- a/src/Pages/Cadastro/styles.css
+++ b/src/Pages/Cadastro/styles.css
@@ -19,13 +19,13 @@
     text-align: center;
 }
 
-/* .imagem-background-login {
+.imagem-background-login {
     width: 100%;
     height: 860px;
-    background-image: url(./img/backLogin.jpg);
+    background-image: url(./img/fundo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-} */
+}
 
 .painel {
     margin: auto;
@@ -34,7 +34,7 @@
     border-radius: 5px;
     -webkit-box-shadow: 0 0 0 1px rgba(0,0,0,.25), 0 3px 20px 0 rgba(0,0,0,.15);
     box-shadow: 0 0 0 1px rgba(0,0,0,.25), 0 3px 20px 0 rgba(0,0,0,.15);
-    background-color: #f9f9fb;
+    background-color: #ffffff;
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
 }
