--- a/src/Pages/RecadosHome/styles.css
+++ b/src/Pages/RecadosHome/styles.css
@@ -13,6 +13,7 @@
 
 .centraliza-colunasTabela th {
     text-align: center;
+    animation: bounceIn 2s;
 }
 
 .css-0 {
@@ -20,7 +21,22 @@
 }
 
 .titulo-grande{
+    animation: bounceIn 2s;
     font-size: 42px;
+}
+
+@keyframes bounceIn{
+    0% {
+        transform: scale(0.1);
+        opacity: 0;
+    }
+    60% {
+        transform: scale(1.2);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 @media only screen and (max-width: 769px) {
     
